# kalanet

KalaNetclient/: BUILD_DETAILED.bat  KalaNet_clinet.pro  README.md  build.bat  build.sh
KalaNetclient/include/: DataManager.h  LoginDialog.h  MainWindow.h  NetworkManager.h  Product.h  User.h
KalaNetclient/src/: DataManager.cpp  LoginDialog.cpp  MainWindow.cpp  NetworkManager.cpp  Product.cpp  User.cpp  main.cpp
Kalanetserver/: .gitignore  CMakeLists.txt  DATA_GUIDE.md  KalaNet_server.pro  TROUBLESHOOTING.md
Kalanetserver/include/: DataManager.h  LoginDialog.h  MainWindow.h  Product.h  Server.h  User.h
Kalanetserver/src/: DataManager.cpp  LoginDialog.cpp  MainWindow.cpp  Product.cpp  Server.cpp  User.cpp  main.cpp  main_server.cpp  test_datapersist.cpp
